# SINF

./: .gitignore  .gitmodules  CMakeLists.txt  Copy of Untitled Diagram.html  LICENSE  MsgCreatorConf.txt  README.md  RGBMatrix.py  RGBMatrixConf.txt  SensorRules.txt  Sprint 2 uml.xml  Use Cases(1)  Use Cases.docx  cores.txt  main.c  main.cpp  matrix.txt  modelo relacional(SPRINT2).docx  outro uml sprint 2  run.sh  uml Sprint 2.xml  write_matrix.py
configs/: SensorConfigurations.txt  SensorRules.json  SensorRules.txt  cores.txt
planing/: Copy of Usersdiagram.html  Use Cases(1)  uml Sprint 2.xml
simulators/: MsgCreatorConf.txt
src/: Actuator.cpp  Actuator.h  Config.cpp  Config.h  Data.cpp  Data.h  Database.cpp  Database.h  Historic.cpp  Historic.h  Location_hist.cpp  Location_hist.h  Mote.cpp  Mote.h  Room.cpp  Room.h  Sensor.cpp  Sensor.h  User.cpp  User.h  main.c  main.cpp
website/: has.php  index.html
website/css/: templatemo_style.css
